--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/theme-utils": "^2.0.21",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@stream-io/video-react-sdk": "^1.7.9",
     "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
