--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@stream-io/video-react-sdk": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.6",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -22,7 +23,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
