--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "description": "",
   "dependencies": {
     "@stream-io/video-react-sdk": "^1.7.9",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.6",
     "cloudinary": "^2.5.1",
@@ -24,7 +29,8 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.8.0",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
