--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "description": "",
   "dependencies": {
     "@stream-io/video-react-sdk": "^1.7.9",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@testing-library/jest-dom": "^6.6.3",
